--- a/And_0802_list/app/src/main/res/layout/activity_main.xml
+++ b/And_0802_list/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn"
+        android:text="선택 완료"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
