--- a/And_0803_DB/app/src/main/res/layout/activity_main.xml
+++ b/And_0803_DB/app/src/main/res/layout/activity_main.xml
@@ -2,88 +2,100 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이름"/>
+            android:text="이름:"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edtName"/>
+            android:hint="그룹명 입력"
+            android:id="@+id/ed1"/>
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="인원"/>
+            android:text="인원:"/>
         <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="인원수 입력"
             android:inputType="numberDecimal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edtNum"/>
+            android:id="@+id/ed2"/>
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:id="@+id/reset"
-            android:text="초기화"/>
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:text="초기화"
+            android:id="@+id/btn1"/>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:id="@+id/input"
-            android:text="입력"/>
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:text="입력"
+            android:id="@+id/btn2"/>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:id="@+id/search"
-            android:text="조회"/>
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:text="조회"
+            android:id="@+id/btn3"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:text="수정"
+            android:id="@+id/btn4"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:text="삭제"
+            android:id="@+id/btn5"/>
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFD7C7"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:background="#bbe309">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/edtNameResult"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:layout_margin="10dp"
+            android:id="@+id/tv1"
             android:text="그룹명"/>
-       <TextView
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-           android:inputType="numberDecimal"
-           android:text="인원"
-           android:layout_margin="10dp"
-           android:id="@+id/edtNumberResult"/>
+            android:id="@+id/tv2"
+            android:text="인원"/>
+
     </LinearLayout>
 
 
