아이돌 리스트 db listview로 띄우기

--- a/And_0804_DBCurAdp/app/src/main/res/layout/activity_main.xml
+++ b/And_0804_DBCurAdp/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="이름"/>
+            android:text="그룹명"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="연락처"/>
+            android:text="인원수"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
